--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,7 +8,7 @@
       android:label="@string/app_name"
       android:roundIcon="@mipmap/ic_launcher_round"
       android:supportsRtl="true"
-      android:theme="@style/Theme.EmptyActivity1">
+      android:theme="@style/Theme.StoryList1">
     <activity android:name="com.android.StoryList.AddNewStory"></activity>
     <activity android:name="com.android.StoryList.MainActivity">
       <intent-filter>
