--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,8 @@
       android:roundIcon="@mipmap/ic_launcher_round"
       android:supportsRtl="true"
       android:theme="@style/Theme.StoryList1">
-    <activity android:name="com.android.StoryList.NewUserRegistration"></activity>
+    <activity android:name="com.android.StoryList.UserProfile"></activity>
+    <activity android:name="com.android.StoryList.NewUserRegistration" />
     <activity android:name="com.android.StoryList.UserLogin" />
     <activity android:name="com.android.StoryList.AddNewStory" />
     <activity android:name="com.android.StoryList.MainActivity">
@@ -24,9 +25,9 @@
         android:name="preloaded_fonts"
         android:resource="@array/preloaded_fonts" />
   </application>
-  <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
   <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
-
   <uses-permission android:name="android.permission.INTERNET" />
+
+  <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
 
 </manifest>
